<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <Button
                android:id="@+id/btn_lunar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:text="@string/picker_custom_lunar" />

            <Button
                android:id="@+id/btn_Time"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:text="@string/picker_time" />

            <Button
                android:id="@+id/btn_Options"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvTime"
                android:layout_margin="10dp"
                android:text="@string/picker_province" />

            <Button
                android:id="@+id/btn_CustomTime"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvTime"
                android:layout_margin="10dp"
                android:text="@string/picker_custom_time" />

            <Button
                android:id="@+id/btn_CustomOptions"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvTime"
                android:layout_margin="10dp"
                android:text="@string/picker_custom_province" />

            <Button
                android:id="@+id/btn_no_linkage"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvTime"
                android:layout_margin="10dp"
                android:text="@string/picker_non_linkage" />

            <Button
                android:id="@+id/btn_GotoJsonData"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvTime"
                android:layout_margin="10dp"
                android:text="@string/picker_json_parse_sample" />
            <Button
                android:id="@+id/btn_Goto_mycus"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvTime"
                android:layout_margin="10dp"
                android:text="@string/picker_json_parse_mycus" />
            <Button
                android:id="@+id/btn_fourlevel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvTime"
                android:layout_margin="10dp"
                android:text="@string/picker_json_four_level" />
            <Button
                android:id="@+id/btn_fourlevel2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvTime"
                android:layout_margin="10dp"
                android:text="@string/picker_json_four_level2" />
            <Button
                android:id="@+id/btn_fourlevel3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvTime"
                android:layout_margin="10dp"
                android:text="@string/picker_json_four_level3" />
            <Button
                android:id="@+id/btn_fragment"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvTime"
                android:layout_margin="10dp"
                android:text="@string/picker_custom_parent" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>